# AudioToMidiBeat

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-macos.yml  build-windows.yml
packaging/: mac_dmg.sh  windows_installer.iss
src/: BeatDetector.cpp  BeatDetector.h  Main.cpp  MidiEngine.cpp  MidiEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
